; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap2/extr_mailbox.c_omap2_mbox_enable_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-omap2/extr_mailbox.c_omap2_mbox_enable_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.omap_mbox = type { i64 }
%struct.omap_mbox2_priv = type { i32, i32, i32 }

@IRQ_TX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.omap_mbox*, i64)* @omap2_mbox_enable_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @omap2_mbox_enable_irq(%struct.omap_mbox* %0, i64 %1) #0 {
  %3 = alloca %struct.omap_mbox*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.omap_mbox2_priv*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.omap_mbox* %0, %struct.omap_mbox** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load %struct.omap_mbox*, %struct.omap_mbox** %3, align 8
  %9 = getelementptr inbounds %struct.omap_mbox, %struct.omap_mbox* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to %struct.omap_mbox2_priv*
  store %struct.omap_mbox2_priv* %11, %struct.omap_mbox2_priv** %5, align 8
  %12 = load i64, i64* %4, align 8
  %13 = load i64, i64* @IRQ_TX, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %19

15:                                               ; preds = %2
  %16 = load %struct.omap_mbox2_priv*, %struct.omap_mbox2_priv** %5, align 8
  %17 = getelementptr inbounds %struct.omap_mbox2_priv, %struct.omap_mbox2_priv* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  br label %23

19:                                               ; preds = %2
  %20 = load %struct.omap_mbox2_priv*, %struct.omap_mbox2_priv** %5, align 8
  %21 = getelementptr inbounds %struct.omap_mbox2_priv, %struct.omap_mbox2_priv* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  br label %23

23:                                               ; preds = %19, %15
  %24 = phi i32 [ %18, %15 ], [ %22, %19 ]
  store i32 %24, i32* %7, align 4
  %25 = load %struct.omap_mbox2_priv*, %struct.omap_mbox2_priv** %5, align 8
  %26 = getelementptr inbounds %struct.omap_mbox2_priv, %struct.omap_mbox2_priv* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @mbox_read_reg(i32 %27)
  store i32 %28, i32* %6, align 4
  %29 = load i32, i32* %7, align 4
  %30 = load i32, i32* %6, align 4
  %31 = or i32 %30, %29
  store i32 %31, i32* %6, align 4
  %32 = load i32, i32* %6, align 4
  %33 = load %struct.omap_mbox2_priv*, %struct.omap_mbox2_priv** %5, align 8
  %34 = getelementptr inbounds %struct.omap_mbox2_priv, %struct.omap_mbox2_priv* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @mbox_write_reg(i32 %32, i32 %35)
  ret void
}

declare dso_local i32 @mbox_read_reg(i32) #1

declare dso_local i32 @mbox_write_reg(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
